@@ -132,6 +132,7 @@ public abstract class ElasticsearchTestBasePlugin implements Plugin<Project> {
                 "--add-opens=java.base/java.time=ALL-UNNAMED",
                 "--add-opens=java.management/java.lang.management=ALL-UNNAMED",
                 "--enable-native-access=ALL-UNNAMED",
+                "--add-modules=jdk.incubator.vector",
                 "-XX:+HeapDumpOnOutOfMemoryError"
             );
 
